# alura-voz

./: README.md  pyproject.toml
Semana 1/: limpeza_dados.py
data/: Telco-Customer-Churn_cleaned.json
