[tool.poetry]
name = "alura-voz"
version = "0.1.0"
description = ""
authors = ["Artur Silva <artur.santana96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
